# dymo-cups-drivers

./: .clang-format  .clang-tidy  .gitignore  BUGS.md  BUGS_DELTA.md  CHANGES.md  Makefile.am  README.md  STATIC_ANALYSIS.md  TECH_REVIEW.md  build-deb.sh  build.sh  configure.ac
debian/: changelog  control  copyright  gbp.conf  rules  watch
debian/patches/: 0009-gcc11-ftbfs-replace-byte-by-unsigned-char.patch  0010-deactivate-tests-due-to-gcc12.patch  series
debian/tests/: control
debian/upstream/: metadata
docs/: Makefile.am  PROTOCOL.md
i18n/: README.md  de.po  en.po  es.po  es_co.po  fr.po  fr_ca.po  it.po  nl.po  pt.po  pt_br.po
ppd/: .gitignore  Makefile.am  README.md  README:md  lm400.drv  lm450.drv  lmmls.drv  lmpc.drv  lmpc2.drv  lmpnp.drv  lmwpnp.drv  lp350.drv  lw300.drv  lw310.drv  lw315.drv  lw320.drv  lw330.drv  lw330t.drv  lw400.drv  lw400t.drv  lw450.drv  lw450dl.drv  lw450dt.drv  lw450t.drv  lw450tt.drv  lw4xl.drv  lw550.drv  lw550p.drv  lw550t.drv  lw550tp.drv  lw5xl.drv  lw5xlp.drv  lwduol.drv  lwduot.drv  lwduot2.drv  lwtt.drv  lww.drv  se450.drv
ppd/shared/: chainmarks.def  colorspace.def  continuous.def  continuous_lw.def  cutoptions.def  errors.def  fonts.def  halftoning.def  labelalignment.def  mediatype.def  options.def  printer.def  tapecolor.def
ppd/shared/sizes/: labelmanager.def  labelwriter_4xl.def  labelwriter_narrow.def  labelwriter_standard.def
samples/: Makefile.am
samples/custom_paper/: CustomPaper.cpp  Makefile.am
samples/custom_paper_tape/: CustomPaperTape.cpp  Makefile.am
samples/paper_bounds/: CairoUtils.h  Makefile.am  PaperBounds.cpp
samples/paper_list/: Makefile.am  PaperList.cpp
samples/test_label/: CairoUtils.h  Makefile.am  TestLabel.cpp
src/: Makefile.am
src/common/: CommonTypedefs.h  CupsFilter.h  CupsPrintEnvironment.cpp  CupsPrintEnvironment.h  CupsUtils.cpp  CupsUtils.h  DummyLanguageMonitor.cpp  DummyLanguageMonitor.h  ErrorDiffusionHalftoning.cpp  ErrorDiffusionHalftoning.h  Halftoning.cpp  Halftoning.h  NonLinearLaplacianHalftoning.cpp  NonLinearLaplacianHalftoning.h  PrinterDriver.h
src/common/tests/: MOCK_PrintEnvironment.cpp  MOCK_PrintEnvironment.h  Makefile.am  TestCommon.cpp  TestCommon.h  TestErrorDiffusionHalftoning.cpp  TestErrorDiffusionHalftoning.h  TestNLLHalftoning.cpp  TestNLLHalftoning.h  testsMain.cpp
src/lm/: CupsFilterLabelManager.cpp  CupsFilterLabelManager.h  LabelManagerDriver.cpp  LabelManagerDriver.h  LabelManagerDriverImpl.cpp  LabelManagerDriverImpl.h  LabelManagerDriverInitializer.cpp  LabelManagerDriverInitializer.h  LabelManagerDriverLegacy.cpp  LabelManagerDriverLegacy.h  LabelManagerLanguageMonitor.cpp  LabelManagerLanguageMonitor.h  Makefile.am  raster2dymolm.cpp
src/lm/tests/: Makefile.am  TestLabelManagerDriver.cpp  TestLabelManagerDriver.h  TestLabelManagerFilter.cpp  TestLabelManagerFilter.h
src/lw/: CupsFilterLabelWriter.cpp  CupsFilterLabelWriter.h  LabelWriterDriver.cpp  LabelWriterDriver.h  LabelWriterDriver400.cpp  LabelWriterDriver400.h  LabelWriterDriverImpl.cpp  LabelWriterDriverImpl.h  LabelWriterDriverInitializer.cpp  LabelWriterDriverInitializer.h  LabelWriterDriverLegacy.cpp  LabelWriterDriverLegacy.h  LabelWriterDriverTwinTurbo.cpp  LabelWriterDriverTwinTurbo.h  LabelWriterLanguageMonitor.cpp  LabelWriterLanguageMonitor.h  Makefile.am  raster2dymolw.cpp
src/lw/tests/: MOCK_LWLMPrintEnvironment.cpp  MOCK_LWLMPrintEnvironment.h  Makefile.am  TestLabelWriterDriver.cpp  TestLabelWriterDriver.h  TestLabelWriterFilter.cpp  TestLabelWriterFilter.h  TestLabelWriterLanguageMonitor.cpp  TestLabelWriterLanguageMonitor.h
